--- a/pom.xml
+++ b/pom.xml
@@ -61,12 +61,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M9</version>
                 <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                    <includes>
-                        <include>**/TestRunner.java</include>
-                    </includes>
+<!--                    <suiteXmlFiles>-->
+<!--                        <suiteXmlFile>testng.xml</suiteXmlFile>-->
+<!--                    </suiteXmlFiles>-->
+<!--                    <includes>-->
+<!--                        <include>**/TestRunner.java</include>-->
+<!--                    </includes>-->
                 </configuration>
             </plugin>
         </plugins>
